# NitroSystem

./: .gitattributes  meson.build  meson.options
include/: nnsys_prefix.h
include/nnsys/: gfd.h  inline.h  mcs.h  misc.h  snd.h  version.h
include/nnsys/fnd/: allocator.h  archive.h  config.h  expheap.h  frameheap.h  heapcommon.h  list.h  unitheap.h
include/nnsys/g2d/: g2d_Animation.h  g2d_Animation_inline.h  g2d_CellAnimation.h  g2d_CellTransferManager.h  g2d_CharCanvas.h  g2d_Data.h  g2d_Entity.h  g2d_Font.h  g2d_Image.h  g2d_Load.h  g2d_MultiCellAnimation.h  g2d_Node.h  g2d_OAM.h  g2d_OAMEx.h  g2d_OAM_Types.h  g2d_OamSoftwareSpriteDraw.h  g2d_PaletteTable.h  g2d_Renderer.h  g2d_RendererCore.h  g2d_SRTControl.h  g2d_Screen.h  g2d_Softsprite.h  g2d_TextCanvas.h  g2d_config.h  g2di_Char.h  g2di_SplitChar.h
include/nnsys/g2d/fmt/: g2d_Anim_data.h  g2d_Cell_data.h  g2d_Character_data.h  g2d_Common_data.h  g2d_Entity_data.h  g2d_Font_data.h  g2d_MultiCell_data.h  g2d_Oam_data.h  g2d_SRTControl_data.h  g2d_Screen_data.h  g2d_Vec_data.h
include/nnsys/g2d/load/: g2d_NAN_load.h  g2d_NCE_load.h  g2d_NCG_load.h  g2d_NCL_load.h  g2d_NEN_load.h  g2d_NFT_load.h  g2d_NMC_load.h  g2d_NSC_load.h
include/nnsys/g3d/: anm.h  cgtool.h  config.h  gecom.h  gecom_inline.h  glbstate.h  glbstate_inline.h  kernel.h  kernel_inline.h  mem.h  sbc.h  sbc_inline.h  util.h
include/nnsys/g3d/anm/: nsbca.h  nsbma.h  nsbta.h  nsbtp.h  nsbva.h
include/nnsys/g3d/binres/: res_print.h  res_struct.h  res_struct_accessor.h  res_struct_accessor_anm.h  res_struct_accessor_inline.h
include/nnsys/g3d/cgtool/: 3dsmax.h  basic.h  maya.h  (+2 more)
include/nnsys/gfd/: gfd_common.h
include/nnsys/mcs/: base.h  baseCommon.h  base_win32.h  config.h  fileIObase.h  fileIOcommon.h  print.h  ringBuffer.h
include/nnsys/snd/: capture.h  config.h  heap.h  main.h  output_effect.h  player.h  seqdata.h  sndarc.h  sndarc_loader.h  sndarc_player.h  sndarc_stream.h  stream.h  waveout.h
libraries/: meson.build
libraries/fnd/: meson.build
libraries/fnd/include/: archive_block.h  heapcommoni.h
libraries/fnd/src/: allocator.c  archive.c  expheap.c  frameheap.c  heapcommon.c  list.c  meson.build  unitheap.c
libraries/g2d/: meson.build
libraries/g2d/include/: g2d_Internal.h  g2di_BGManipulator.h  g2di_BitReader.h  g2di_CellUtil.h  g2di_Debug.h  g2di_Dma.h  g2di_Mtx32.h  g2di_OamUtil.h  g2di_RendererMtxCache.h  g2di_RendererMtxStack.hpp  g2di_RendererMtxState.h
libraries/g2d/src/: g2d_Animation.c  g2d_CellAnimation.c  g2d_CellTransferManager.c  g2d_CharCanvas.c  g2d_CullingUtility.c  g2d_Entity.c  g2d_Font.c  g2d_Image.c  g2d_MultiCellAnimation.c  g2d_Node.c  g2d_OAM.c  g2d_OAMEx.c  g2d_OamSoftwareSpriteDraw.c  g2d_PaletteTable.c  g2d_Renderer.c  g2d_RendererCore.c  g2d_SRTControl.c  g2d_Screen.c  g2d_Softsprite.c  g2d_TextCanvas.c  meson.build
libraries/g2d/src/internal/: g2di_BGManipulator.c  g2di_BitReader.c  g2di_Mtx32.c  g2di_SplitChar.c  g2di_debug.c
libraries/g2d/src/load/: g2d_Load.c  g2d_NAN_load.c  g2d_NCG_load.c  g2d_NCL_load.c  g2d_NEN_load.c  g2d_NFT_load.c  g2d_NMC_load.c  g2d_NOB_load.c  g2d_NSC_load.c
libraries/g3d/: meson.build
libraries/g3d/src/: 1mat1shp.c  anm.c  cgtool.c  gecom.c  glbstate.c  kernel.c  mem.c  meson.build  model.c  sbc.c  util.c
libraries/g3d/src/anm/: nsbma.c  nsbta.c  nsbtp.c  nsbva.c
libraries/g3d/src/binres/: res_print.c  res_print_internal.h  res_print_nsbca.c  res_print_nsbma.c  res_print_nsbta.c  res_print_nsbtp.c  res_print_nsbva.c  res_struct.c  res_struct_accessor.c  res_struct_accessor_anm.c
libraries/g3d/src/cgtool/: 3dsmax.c  basic.c  maya.c  si3d.c  xsi.c
libraries/gfd/: meson.build
libraries/gfd/include/: gfdi_LinkedListVramMan_Common.h
libraries/gfd/src/: meson.build
libraries/gfd/src/VramManager/: gfd_FramePlttVramMan.c  gfd_FrameTexVramMan.c  gfd_LinkedListPlttVramMan.c  gfd_LinkedListTexVramMan.c  gfd_PlttVramMan.c  gfd_TexVramMan.c  gfdi_LinkedListVramMan_Common.c
libraries/gfd/src/VramTransferMan/: gfd_VramTransferManager.c
libraries/mcs/: meson.build
libraries/mcs/include/: baseCommoni.h  basei.h  fileIOcommoni.h  printi.h
libraries/mcs/src/: base.c  fileIOmain.c  meson.build  print.c  ringBuffer.c
libraries/snd/: meson.build
libraries/snd/src/: capture.c  fader.c  heap.c  main.c  meson.build  output_effect.c  player.c  resource_mgr.c  seqdata.c  sndarc.c  sndarc_loader.c  sndarc_player.c  sndarc_stream.c  stream.c  waveout.c
(+11 files in other folders)
