libnnsg2d_srcs = files(
    'load/g2d_NAN_load.c',
    'load/g2d_NOB_load.c',
    'load/g2d_NMC_load.c',
    'load/g2d_NEN_load.c',
    'load/g2d_NCG_load.c',
    'load/g2d_NCL_load.c',
    'load/g2d_NSC_load.c',
    'load/g2d_Load.c',
    'g2d_Softsprite.c',
    'g2d_Animation.c',
    'g2d_Oam.c',
    'g2d_Oamex.c',
    'g2d_PaletteTable.c',
    'g2d_Image.c',
    'g2d_SRTControl.c',
    'g2d_Node.c',
    'g2d_CullingUtility.c',
    'g2d_CellAnimation.c',
    'g2d_MultiCellAnimation.c',
    'g2d_Entity.c',
    'g2d_Renderer.c',
    'internal/g2di_Mtx32.c',
    'internal/g2di_debug.c',
    'g2d_CellTransferManager.c',
    'g2d_OamSoftwareSpriteDraw.c',
    'g2d_Screen.c',
    'g2d_RendererCore.c',
    'g2d_Font.c',
    'g2d_CharCanvas.c',
    'g2d_TextCanvas.c',
    'load/g2d_NFT_load.c',
    'internal/g2di_BitReader.c',
    'internal/g2di_SplitChar.c',
    'internal/g2di_BGManipulator.c',
)