libnnsg3d_srcs = files(
    'kernel.c',
    'glbstate.c',
    'anm.c',
    'cgtool.c',
    'sbc.c',
    '1mat1shp.c',
    'gecom.c',
    'util.c',
    'mem.c',
    'model.c',
    'binres/res_print.c',
    'binres/res_print_nsbca.c',
    'binres/res_print_nsbma.c',
    'binres/res_print_nsbta.c',
    'binres/res_print_nsbtp.c',
    'binres/res_print_nsbva.c',
    'binres/res_struct.c',
    'binres/res_struct_accessor.c',
    'binres/res_struct_accessor_anm.c',
    'anm/nsbca.c',
    'anm/nsbma.c',
    'anm/nsbta.c',
    'anm/nsbtp.c',
    'anm/nsbva.c',
    'cgtool/basic.c',
    'cgtool/maya.c',
    'cgtool/si3d.c',
    'cgtool/3dsmax.c',
    'cgtool/xsi.c'
)