libnnsgfd_srcs = files(
    'VramManager/gfd_TexVramMan.c',
    'VramManager/gfd_PlttVramMan.c',
    'VramManager/gfd_FrameTexVramMan.c',
    'VramManager/gfd_FramePlttVramMan.c',
    'VramTransferMan/gfd_VramTransferManager.c',
    'VramManager/gfdi_LinkedListVramMan_Common.c',
    'VramManager/gfd_LinkedListTexVramMan.c',
    'VramManager/gfd_LinkedListPlttVramMan.c'
)